# arque

./: README.md
docs/: arque_frame.drawio
driver/: Cargo.toml  build.rs
driver/src/: lib.rs
flatbuffers/: event.fbs  store.fbs
node-client/: .eslintrc  index.ts  package-lock.json  package.json  tsconfig.json
node-client/source/: index.d.ts
node-client/source/lib/: aggregate.ts  arque.ts
node-client/src/: index.d.ts
node-client/src/lib/: projection.ts
protos/: store.proto
store/: .gitignore  Cargo.toml  README.md  build.rs
store/benches/: benches.rs
store/src/: main.rs
store/src/handlers/: create_event.rs  mod.rs
store/src/lib/: event.rs  event_db.rs  event_id.rs  frame.rs  mod.rs  server.rs
store/src/lib/fbs/: mod.rs
store/src/lib/fbs/event/: event_generated.rs
