[package]
name = "store"
version = "0.1.0"
edition = "2018"

[dependencies]
tonic = "0.5"
prost = "0.8"
prost-types = "0.8"
leveldb = "0.8"
tokio = { version = "1.12", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.6", features = ["codec"] }
machine-uid = "0.2"
lazy_static = "1.4"
rand = "0.8"
bytes = "1.1"
hex = "0.4"
flatbuffers = "2.0"
db-key = "0.0.5"

[build-dependencies]
tonic-build = "0.5"
flatc-rust = "0.2"

[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio"] }

[[bench]]
name = "benches"
harness = false